<resources>
    <string name="app_name">Tour Guide</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_historical">Historical</string>
    <string name="menu_shopping">Shopping</string>
    <string name="menu_restaurants">Restaurants</string>
    <string name="menu_streets">Streets</string>
    <string name="menu_about_cairo">About Cairo</string>
    <string name="about_cairo_one">Cairo is the capital and largest city of Egypt. The Cairo metropolitan area, with a population of 21.3 million, is the largest metropolitan area in the Middle East, the largest metropolitan area in the Arab world, the second largest in Africa, and the world’s sixth largest. Cairo is associated with ancient Egypt, as the famous Giza pyramid complex and the ancient city of Memphis are located in its geographical area. Located near the Nile Delta,Cairo was founded in 969 AD during the Fatimid dynasty, but the land composing the present-day city was the site of Ancient National Capitals whose remnants remain visible in parts of Old Cairo. Cairo has long been a centre of the region\'s political and cultural life</string>
    <string name="about_cairo_two">" and is titled \"the city of a thousand minarets\" for its preponderance of Islamic architecture. Cairo's historic center was awarded World Heritage Site-status in 1979.Cairo is considered a World City with a \"Beta +\" classification according to GaWC. Today, the Egyptian capital has the oldest and largest film and music industries in the Middle East and the Arab world, as well as the world's second-oldest institution of higher learning, Al-Azhar University. Many international media, businesses, and organizations have regional headquarters in the city; the Arab League has had its headquarters in Cairo for most of its existence. With a population of over 9 million spread over 453 km2 (175 sq mi), Cairo is by far the largest city in Egypt. An additional 9.5 million inhabitants live in close proximity to the city. Cairo, like many other megacities, suffers from high levels of pollution and traffic. The Cairo Metro is one of only two metro systems in Africa (the other being in Algiers, Algeria), and ranks amongst the fifteen busiest in the world, with over 1 billion annual passenger rides. The economy of Cairo was ranked first in the Middle East in 2005, and 43rd globally on Foreign Policy's 2010 Global Cities Index."</string>
    <string name="cairo">Cairo,Egypt</string>
    <string name="his_pyramids_about">The Giza pyramid complex is an archaeological site on the Giza plateau, on the outskirts of Cairo, Egypt. It includes the Three Great Pyramids, the Great Sphinx, several tombs, a workers\' village and an industrial complex. It is located in the Western Desert, about 9 km west of the Nile River in the old town of Giza, and about 13 km southwest of downtown Cairo.</string>
    <string name="his_pyramids_name">The Pyramids</string>
    <string name="his_pyramids_addeess">Nazlet El-Semman, Al Haram, Giza Governorate</string>
    <string name="his_pyramids_phone">+20233835800</string>
    <string name="his_pyramids_location">29.9792307,31.1339981</string>
    <string name="his_EgyMuseum_about">The Egyptian Museum is one of the largest and most famous international museums, located in the heart of the Egyptian capital "Cairo" on the northern side of Tahrir Square. Its establishment dates back to 1835. It is considered one of the first museums in the world that was established to be a public museum, unlike the museums that preceded it. The museum includes more than 180,000 artifacts, the most important of which are the archaeological collections found in the tombs of the kings and the royal entourage of the middle family in Dahshur in 1894, The museum now houses the largest archaeological collection in the world that reflects all phases of ancient Egyptian history.</string>
    <string name="his_EgyMuseum_name">The Egyptian Museum</string>
    <string name="his_EgyMuseum_addeess">Ismailia, Qasr El Nil, Cairo Governorate</string>
    <string name="his_EgyMuseum_phone">+2022582448</string>
    <string name="his_EgyMuseum_location">30.0478001,31.2320908</string>
    <string name="his_Azhar_about">Al-Azhar Mosque or Al-Azhar Mosque is one of the most important religious landmarks of Cairo, not only at the level of worship and spirituality, but at the level of studying Sharia sciences and at the level of the world for more than a thousand years. In addition, the Al-Azhar Mosque is an unmissable architectural masterpiece for foreign tourists, with its three minarets dating back to the 14-16 centuries AD and its spacious courtyard dating back to an earlier date.</string>
    <string name="his_Azhar_name">"El-Azhar Mosque"</string>
    <string name="his_Azhar_addeess">El-Darb El-Ahmar, Cairo Governorate</string>
    <string name="his_Azhar_location">30.0460383,31.2624629</string>
    <string name="his_Coptic_about">The Coptic Museum houses the largest collection of Coptic artifacts in the world and was inaugurated in 1910. The museum was established through the efforts of Marcus Simaika Pasha, a prominent Coptic figure who was vested in the preservation of Coptic heritage. Simaika Pasha bought and collected Coptic antiquities and various architectural elements from older churches that were undergoing renovation, and used them to built the museum and establish its collection.</string>
    <string name="his_Coptic_name">"The Coptic Museum"</string>
    <string name="his_Coptic_addeess">3 Mari Gerges, Kom Ghorab, Old Cairo, Cairo Governorate</string>
    <string name="his_Coptic_phone">+20223628766</string>
    <string name="his_Coptic_location">30.0056036,31.2301165</string>
    <string name="his_Citadel_about">The Citadel of Sultan Salah al-Din al-Ayyubi (Saladin) is one of the most iconic monuments in Islamic Cairo, and among the most impressive defensive fortresses dating to the Middle Ages. Its strategic location on the Muqattam Hills gave it a formidable defensive position, and offered, as it still does today, an unrestricted panoramic view of Cairo.</string>
    <string name="his_Citadel_name">"Salah Al-Din Al-Ayoubi Citadel"</string>
    <string name="his_Citadel_addeess">Salah Salem St, Al Abageyah, El Khalifa, Cairo Governorate</string>
    <string name="his_Citadel_phone">+20225121735</string>
    <string name="his_Citadel_location">30.0292203,31.2574295</string>
    <string name="his_Tower_about">The Cairo Tower is a tower located in the Egyptian capital, Cairo. It was built between 1956 and 1961 of reinforced concrete on the design of the Egyptian lotus flower, designed by engineer Naoum Shabib, and is located in the heart of Cairo on the island of Zamalek in the Nile River. Its height reaches 187 meters, which is 43 meters higher than the Great Pyramid of Giza.</string>
    <string name="his_Tower_name">"Cairo Tower"</string>
    <string name="his_Tower_addeess">Zamalek, Cairo Governorate</string>
    <string name="his_Tower_phone">+20227365112</string>
    <string name="his_Tower_location">30.045915,31.2221011</string>
    <string name="his_Baron_about">Baron Empain\'s palace, with its Indian style, and its tower stands out in the desert landscape, is distinct from the rest of the city. The palace reflects the high status of its owner and marks a major milestone in the urban landscape of Heliopolis. Baron Empain\'s palace is the most prominent Monuments in the capital, its unique and innovative image attracting crowds of pedestrians on the road.</string>
    <string name="his_Baron_name">Baron Empain Palace</string>
    <string name="his_Baron_addeess">El-Orouba, El-Montaza, Heliopolis, Cairo Governorate 11757</string>
    <string name="his_Baron_location">30.0866701,31.3281445</string>
    <string name="his_Sphinx_about">The Great Sphinx of Giza is a giant 4,500-year-old limestone statue located near the Great Pyramid in Giza, Egypt. Measuring 240 feet (73 meters) long and 66 feet (20 meters) high, the Great Sphinx is one of the world\'s largest monuments. It is also one of the most recognizable relics of the ancient Egyptians, though the origins and history of the colossal structure are still debated.</string>
    <string name="his_Sphinx_name">Great Sphinx of Giza</string>
    <string name="his_Sphinx_addeess">Al Giza Desert, Giza Governorate</string>
    <string name="his_Sphinx_location">29.9752687,31.1353787</string>
    <string name="his_Opera_about">The Egyptian Opera House, opened in 1988 and located in its new building, which was built with a grant from the Japanese government to its Egyptian counterpart on the land of the island in Cairo. The house was built in the Islamic style. This great cultural edifice, which opened on October 10, 1988, is considered the alternative to the Khedivial Opera House, which was built by Khedive Ismail in 1869 and burned down on October 28, 1971, after it remained a cultural beacon for 102 years.</string>
    <string name="his_Opera_name">Cairo Opera House</string>
    <string name="his_Opera_addeess">Opera Square, Zamalek, Cairo Governorate</string>
    <string name="his_Opera_phone">+20227390188</string>
    <string name="his_Opera_location">30.0423613,31.2214795</string>
    <string name="his_Church_about">The Hanging Church is located in the Old Cairo district, in the important archaeological area of Coptic Cairo. It is close to the Amr Ibn Al-Aas Mosque, the Ibn Ezra Synagogue, the Church of Saint Mina next to the Babylon Fortress, the Church of Martyr Mercurius (Abu Sefein), and many other churches. And it was called the suspended because it was built on two of the ancient towers of the Roman fortress (Babylon Fort), which was built by Emperor Trajan in the second century AD.</string>
    <string name="his_Church_name">The Hanging Church</string>
    <string name="his_Church_addeess">Kom Ghorab, Old Cairo, Cairo Governorate</string>
    <string name="his_Church_location">30.0052663,31.2279939</string>
    <string name="sho_Khan_about">Khan Al-Khalili, one of the old districts of Cairo, is a major tourist attraction for visitors to Cairo and Egypt in general. It is characterized by the presence of popular bazaars, shops and restaurants, and is also characterized by the large number of tourists and the familiarity of its residents with them. Khan Al-Khalili neighborhood was a source of inspiration for many Egyptian writers, most notably the writer Naguib Mahfouz, who wrote one of his novels that takes place in the neighborhood and bears his name \"Khan Al-Khalili\", which was turned into a movie starring actor Imad Hamdi.</string>
    <string name="sho_Khan_name">Khan el-Khalili</string>
    <string name="sho_Khan_addeess">El-Gamaleya, El Gamaliya, Cairo Governorate</string>
    <string name="sho_Khanlocation">30.0477386,31.2600651</string>
    <string name="sho_Festival_about">This wonderful mall was established by Al-Futtaim Real Estate Group and its construction was completed in 2013. This huge mall is located on a very large area estimated at about 700 acres, making it the best shopping mall in Cairo. On this large area there are many services such as renting or selling apartments There are world-class schools in education</string>
    <string name="sho_Festival_name">Cairo Festival City Mall</string>
    <string name="sho_Festival_addeess">108.04 km، Cairo Festival City Mall, Cairo Festival City, Ring Road, New Cairo، Cairo Governorate 11385</string>
    <string name="sho_Festival_phone">+20226186000</string>
    <string name="sho_Festival_location">30.0290116,31.4108183</string>
    <string name="place_name">Place Name</string>
    <string name="more_info">More Info</string>
</resources>