<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_about_cairo"
            android:title="@string/menu_about_cairo" />
        <item
            android:id="@+id/nav_historical"
            android:title="@string/menu_historical" />
        <item
            android:id="@+id/nav_shopping"
            android:title="@string/menu_shopping" />
        <item
            android:id="@+id/nav_restaurants"
            android:title="@string/menu_restaurants" />
        <item
            android:id="@+id/nav_streets"
            android:title="@string/menu_streets"/>


    </group>
</menu>