<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Adapter.PlaceShow">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/place_image_large"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_image_place"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:scaleType="centerCrop"
            tools:src="@drawable/cairo_one"/>

        <TextView
            android:id="@+id/palce_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/teal_700"
            android:padding="8dp"
            android:text="@string/place_name"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/info_place"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            android:textColor="?attr/colorPrimary"
            tools:text="@string/about_cairo_one" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/teal_700"
            android:padding="8dp"
            android:text="@string/more_info"
            android:textColor="@color/white"
            android:textSize="28sp" />

        <LinearLayout
            android:id="@+id/call_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:textColor="?attr/colorPrimary"
                app:srcCompat="@drawable/ic_call" />

            <TextView
                android:id="@+id/phone_place"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorPrimary"
                android:layout_marginLeft="32dp"
                tools:text="@string/his_Citadel_phone" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                app:srcCompat="@drawable/ic_location" />

            <TextView
                android:id="@+id/location_place"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:textColor="?attr/colorPrimary"
                tools:text="@string/his_Azhar_addeess"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>